test/cases/compile_errors/return_invalid_type_from_test.zig
test "example" {
    return 1;
}

// error
// is_test=true
//
// :2:12: error: expected type 'anyerror!void', found 'comptime_int'
